--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     
     <h1>Clone</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, odio.</p>
     <script src="./script.js"></script>
 </body>
 </html>
